compiler/testData/diagnostics/tests/sealed/LocalSealed.kt
fun foo() {
    <!WRONG_MODIFIER_TARGET!>sealed<!> class My
}
